# Punkt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SETUP.md  alias_punkt_compiler.sh
applications/: CMakeLists.txt  ast_printer.cc  ast_xml_printer.cc  code_printer.cc  decorated_ast_printer.cc  punkt_compiler.cc  token_printer.cc
applications_input_files/: random_words_1.punkt  simple_main.punkt  test_input.punkt
code_generator/: CMakeLists.txt  code_generation_visitor.cc  code_generation_visitor.h  code_generator.cc  code_generator.h  codegen_context.cc  codegen_context.h  operator_code_generator.cc  operator_code_generator.h  operator_codegen.cc  operator_codegen.h
examples/: binary_representation.punkt  fibonacci.punkt  gcd.punkt  print_binary_representation.punkt  selection_sort.punkt
input_files/: expressions_1.punkt  simple_main.punkt
input_handler/: CMakeLists.txt  input_handler.cc  input_handler.h  located_char.h  located_char_stream.cc  located_char_stream.h  text_location.h
logging/: CMakeLists.txt  logger.h  punkt_logger.cc  punkt_logger.h
parse_node/: CMakeLists.txt  all_nodes.h  code_block_node.h  declaration_node.h  declaration_statement_node.h  error_node.h  identifier_node.h  integer_literal_node.h  main_node.h  operator_node.h  parse_node.cc  parse_node.h  parse_node_ir_visitor.h  parse_node_visitor.h  print_statement_node.h  program_node.h
parse_node/parse_nodes/: CMakeLists.txt  all_nodes.h  alloc_expression_node.cc  alloc_expression_node.h  array_type_node.cc  array_type_node.h  assignment_statement_node.cc  assignment_statement_node.h  base_type_node.cc  base_type_node.h  boolean_literal_node.cc  boolean_literal_node.h  call_statement_node.cc  call_statement_node.h  character_literal_node.cc  character_literal_node.h  code_block_node.cc  code_block_node.h  dealloc_statement_node.cc  dealloc_statement_node.h  declaration_statement_node.cc  declaration_statement_node.h  error_node.cc  error_node.h  expression_statement_node.cc  expression_statement_node.h  float_literal_node.cc  float_literal_node.h  for_statement_node.cc  for_statement_node.h  function_definition_node.cc  function_definition_node.h  function_node.cc  function_node.h  function_parameter_node.cc  function_parameter_node.h  function_prototype_node.cc  function_prototype_node.h  identifier_node.cc  identifier_node.h  (+32 more)
parser/: CMakeLists.txt  parser.cc  parser.h
scanner/: CMakeLists.txt  keyword.cc  keyword.h  operator.cc  operator.h  punctuator.cc  punctuator.h  punctuator_buffer.h  punctuator_scanner.cc  punctuator_scanner.h  reserved_component.h  scanner.cc  scanner.h
semantic_analyzer/: CMakeLists.txt  function_declaration_visitor.cc  function_declaration_visitor.h  function_definition_visitor.cc  function_definition_visitor.h  primitive_type.cc  primitive_type.h  semantic_analysis_preprocessor.cc  semantic_analysis_preprocessor.h  semantic_analysis_visitor.cc  semantic_analysis_visitor.h  semantic_analyzer.cc  semantic_analyzer.h  type.cc  type.h
semantic_analyzer/signatures/: CMakeLists.txt  signature.cc  signature.h  signatures.cc  signatures.h
semantic_analyzer/types/: CMakeLists.txt  arbitrary_type.cc  arbitrary_type.h  array_type.cc  array_type.h  base_type.cc  base_type.h  custom_type.h  lambda_type.cc  lambda_type.h  type.h
symbol_table/: CMakeLists.txt  scope.cc  scope.h  symbol_table.cc  symbol_table.h
tests/: CMakeLists.txt
tests/compiler/: punkt_compile_test_helper.py  punkt_compiler_test_helper.py  test_array.py  test_code_block.py  test_comment.py  test_compiler.py  test_declaration_statement.py  test_expression.py  test_float.py  test_for_statement.py  test_if_statement.py  test_lambda.py  test_main_function.py  test_rational.py  test_return_statement.py  test_while_statement.py
tests/input_handler/: CMakeLists.txt  input_handler_test.cc
tests/input_handler/test_files/: TestLargeInput.punkt  TestNextEmptyLines.punkt  TestNextManyLines.punkt
tests/parser/: CMakeLists.txt  parser_test.cc  test_parser.py
tests/scanner/: CMakeLists.txt  scanner_test.cc
tests/scanner/test_files/: TestScanIdentifiers.punkt  TestScanIntegerLiterals.punkt  TestScanKeywords.punkt  TestScanKeywordsAndIdentifiers.punkt  TestScanPunctuatorsSimple.punkt
tests/test_input_files/bad/: test_bad_array_1.punkt  test_bad_array_10.punkt  test_bad_array_11.punkt  test_bad_array_12.punkt  test_bad_array_13.punkt  test_bad_array_14.punkt  test_bad_array_15.punkt  test_bad_array_16.punkt  test_bad_array_17.punkt  test_bad_array_18.punkt  test_bad_array_19.punkt  test_bad_array_2.punkt  test_bad_array_20.punkt  test_bad_array_21.punkt  test_bad_array_22.punkt  test_bad_array_23.punkt  test_bad_array_3.punkt  test_bad_array_4.punkt  test_bad_array_5.punkt  test_bad_array_6.punkt  test_bad_array_7.punkt  test_bad_array_8.punkt  test_bad_array_9.punkt  test_bad_char_decl_1.punkt  test_bad_char_decl_2.punkt  test_bad_char_decl_3.punkt  test_bad_expression_1.punkt  test_bad_expression_2.punkt  test_bad_expression_3.punkt  test_bad_if_stmt_1.punkt  test_bad_if_stmt_2.punkt  test_bad_if_stmt_3.punkt  test_bad_if_stmt_4.punkt  test_bad_if_stmt_5.punkt  test_bad_if_stmt_6.punkt  test_bad_if_stmt_7.punkt  test_bad_return_stmt_1.punkt  test_bad_return_stmt_10.punkt  test_bad_return_stmt_11.punkt  test_bad_return_stmt_12.punkt  (+16 more)
tests/test_input_files/good/: test_good_array_1.punkt  test_good_array_10.punkt  test_good_array_11.punkt  test_good_array_12.punkt  test_good_array_13.punkt  test_good_array_14.punkt  test_good_array_15.punkt  test_good_array_16.punkt  test_good_array_17.punkt  test_good_array_18.punkt  test_good_array_19.punkt  (+251 more)
token/: CMakeLists.txt  all_tokens.h  boolean_literal_token.h  character_literal_token.h  eof_token.h  float_literal_token.h  identifier_token.cc  identifier_token.h  integer_literal_token.cc  integer_literal_token.h  keyword_token.h  operator_token.h  placeholder_token.h  program_token.h  punctuator_token.h  string_literal_token.h  token.h
utilities/: CMakeLists.txt  xml_generator_visitor.cc  xml_generator_visitor.h
(+145 files in other folders)
