add_library(boolean_literal_node boolean_literal_node.cc)

add_library(character_literal_node character_literal_node.cc)

add_library(code_block_node code_block_node.cc)

add_library(declaration_statement_node declaration_statement_node.cc)

add_library(error_node error_node.cc)

add_library(identifier_node identifier_node.cc)

add_library(if_statement_node if_statement_node.cc)

add_library(integer_literal_node integer_literal_node.cc)

add_library(main_node main_node.cc)

add_library(operator_node operator_node.cc)

add_library(print_statement_node print_statement_node.cc)

add_library(program_node program_node.cc)

add_library(string_literal_node string_literal_node.cc)
