add_library(assignment_statement_node assignment_statement_node.cc)
add_library(boolean_literal_node boolean_literal_node.cc)
add_library(character_literal_node character_literal_node.cc)
add_library(code_block_node code_block_node.cc)
add_library(declaration_statement_node declaration_statement_node.cc)
add_library(error_node error_node.cc)
add_library(for_statement_node for_statement_node.cc)
add_library(function_node function_node.cc)
add_library(function_parameter_node function_parameter_node.cc)
add_library(function_prototype_node function_prototype_node.cc)
add_library(identifier_node identifier_node.cc)
add_library(if_statement_node if_statement_node.cc)
add_library(integer_literal_node integer_literal_node.cc)
add_library(main_node main_node.cc)
add_library(nop_node nop_node.cc)
add_library(operator_node operator_node.cc)
add_library(print_statement_node print_statement_node.cc)
add_library(program_node program_node.cc)
add_library(return_statement_node return_statement_node.cc)
add_library(string_literal_node string_literal_node.cc)
add_library(type_node type_node.cc)
target_link_libraries(type_node type)
