# # add_executable(scanner_test scanner_test.cc)
# target_link_libraries(scanner_test scanner GTest::gtest)
# include(GoogleTest)
# gtest_discover_tests(scanner_test)

# target_compile_definitions(
# 	scanner_test
# 	PRIVATE
# 	SCANNER_TEST_FILE_DIRECTORY="${PROJECT_SOURCE_DIR}/tests/scanner/test_files/"
# )
